welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:32: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime102.SnakeBuggle'
override def run() {
             ^